bubba-backend (1.3.3) karmic; urgency=emergency

  * force promisc on eth1 if br0 after ethtool due to buggy ethtool 

 -- Carl Fürstenberg <carl@excito.com>  Mon, 22 Feb 2010 15:25:32 +0100

bubba-backend (1.3.2) claire estelle; urgency=low

  * create new cert instead of updating old one for dovecot

 -- Carl Fürstenberg <carl@excito.com>  Wed, 17 Feb 2010 22:29:47 +0100

bubba-backend (1.3.1) claire estelle; urgency=low

  * setting default network profile to auto instead of server 

 -- Carl Fürstenberg <carl@excito.com>  Thu, 11 Feb 2010 13:20:04 +0100

bubba-backend (1.3.0) claire estelle; urgency=low

  * Updated version number.

 -- PA Nilsson <pa@excito.com>  Wed, 10 Feb 2010 15:27:15 +0100

bubba-backend (1.2.4.51) claire estelle; urgency=low

  * Fixed lookup when accessing networkmanager from dhclient exit script. 

 -- PA Nilsson <pa@excito.com>  Wed, 10 Feb 2010 12:04:10 +0100

bubba-backend (1.2.4.50) claire estelle; urgency=low

  * Restarting samba when adding and deleting printers
  * Only restart samba on dhclient LAN events.

 -- PA Nilsson <pa@excito.com>  Tue, 09 Feb 2010 22:37:30 +0100

bubba-backend (1.2.4.49) claire estelle; urgency=low

  * redivert samba dhcp3 hook, and install an own to exit hooks to enable
    restart instead of reload 

 -- Carl Fürstenberg <carl@excito.com>  Mon, 08 Feb 2010 12:54:32 +0100

bubba-backend (1.2.4.48) claire estelle; urgency=low

  * resolve long lived bug in the new "old" config restore code 

 -- Carl Fürstenberg <carl@excito.com>  Mon, 08 Feb 2010 12:38:17 +0100

bubba-backend (1.2.4.47) claire estelle; urgency=low

  * missing comma 

 -- Carl Fürstenberg <carl@excito.com>  Sun, 07 Feb 2010 18:50:40 +0100

bubba-backend (1.2.4.46) claire estelle; urgency=low

  * restore 

 -- Carl Fürstenberg <carl@excito.com>  Sun, 07 Feb 2010 18:39:00 +0100

bubba-backend (1.2.4.45) claire estelle; urgency=emergency

  * sheck for scalar of array for old backups (Closes: #1156) 
